# ranvier

./: .gitattributes  .gitignore  .ranvier-api-policy.json  .ranvier-coverage-policy.json  .ranvier-examples-manifest.json  .ranvier-load-soak-policy.json  .ranvier-supply-chain-policy.json  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  SECURITY.md  api-stable-candidate-baseline.json  api-surface-inventory.json  basic.json  basic.ts  bench_err.txt  bench_err_db.txt  build_error.txt  db_bench_err.txt  deny.toml  err.txt  err_examples.txt  err_http.txt  err_http3.txt  error.txt  error_log.txt  run_output.txt
.ranvier/: policy.toml.example
bench/: Cargo.toml
bench/benches/: axon_latency.rs  bus_operations.rs  http_throughput.rs  transition_chain.rs
bench/frameworks/express/: index.js  package-lock.json  package.json  run_express.ps1
bench/frameworks/fastapi/: main.py  requirements.txt  run_fastapi.ps1
bench/scripts/: run_all.ps1  run_axum_scenario1.ps1  run_axum_scenario2.ps1  run_axum_scenario3.ps1  run_axum_scenario4.ps1  run_scenario1.ps1  run_scenario2.ps1  run_scenario3.ps1  run_scenario4.ps1
cli/: Cargo.toml
cli/src/: build.rs  check.rs  dev.rs  main.rs  new.rs  status.rs
cli/templates/new-project/: Cargo.toml
cli/templates/new-project/src/: main.rs
core/: Cargo.toml  README.md
core/src/: axon.rs  bus.rs  cancellation.rs  circuit.rs  cluster.rs  config.rs  context.rs  debug.rs  error.rs  event.rs  iam.rs  lib.rs  metadata.rs  module.rs  never.rs  outcome.rs  pipeline.rs  policy.rs  replay.rs  runtime_policy.rs  saga.rs  schematic.rs  service.rs  static_gen.rs  step.rs  streaming.rs  synapse.rs  telemetry.rs  tenant.rs  timeline.rs  transition.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  node.rs  pool.rs  transaction.rs
crates/http/: Cargo.toml
crates/http/src/: ingress.rs  service.rs
crates/status/: Cargo.toml
crates/status/src/: lib.rs
crates/std/: Cargo.toml
crates/std/src/: prelude.rs
crates/std/src/nodes/: debug.rs  logic.rs  mod.rs
docs/: CHANGELOG.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  PHILOSOPHY.ko.md  PHILOSOPHY.md  SECURITY.md
examples/: README.md  catalog.json
examples/admin-crud-demo/: Cargo.toml  README.md
examples/admin-crud-demo/src/: main.rs
examples/auth-jwt-role-demo/: Cargo.toml
examples/auth-jwt-role-demo/src/: auth.rs  main.rs
examples/auth-tower-integration/: Cargo.toml  README.ko.md  README.md
examples/auth-tower-integration/src/: auth.rs  main.rs  tower_auth.rs
examples/auth-transition/: .env.example  Cargo.toml  README.ko.md  README.md
examples/auth-transition/src/: auth.rs  main.rs
examples/background-jobs-demo/: Cargo.toml
examples/background-jobs-demo/src/: main.rs
examples/basic-schematic/: Cargo.toml  schematic.json
examples/basic-schematic/src/: main.rs
examples/bus-capability-demo/: Cargo.toml
examples/bus-capability-demo/src/: main.rs
examples/closure-transition-demo/: Cargo.toml
examples/closure-transition-demo/src/: main.rs
examples/cluster-demo/: Cargo.toml
examples/cluster-demo/src/: main.rs
examples/complex-schematic/: Cargo.toml
examples/complex-schematic/src/: main.rs
examples/custom-error-types/: Cargo.toml
examples/custom-error-types/src/: main.rs
examples/db-example/: Cargo.toml
examples/db-example/src/: main.rs
flow/: Cargo.toml
graphql/: Cargo.toml  README.md
graphql/src/: ingress.rs  lib.rs  schema.rs
grpc/: Cargo.toml  README.md
grpc/src/: error.rs  extract.rs  ingress.rs  lib.rs  response.rs  stream.rs
grpc/tests/: grpc_test.rs
guard/: Cargo.toml  README.md
guard/src/: advanced_guards.rs  distributed.rs  lib.rs
http/: CHANGELOG.md  Cargo.toml  README.md  compile_errors.txt  compile_errors_v10.txt  compile_errors_v11.txt  compile_errors_v2.txt  compile_errors_v3.txt  compile_errors_v4.txt  compile_errors_v5.txt  compile_errors_v6.txt  compile_errors_v7.txt  compile_errors_v8.txt  compile_errors_v9.txt
http/examples/: large_api_demo.rs  validation_struct_level.rs
http/src/: body.rs  bus_ext.rs  extract.rs  guard_integration.rs  htmx.rs  http3.rs  ingress.rs  lib.rs  pagination.rs  response.rs  service.rs  sse.rs  test_harness.rs
http/src/extract/: multipart.rs
http/tests/: bus_injector.rs  multipart_test.rs  parallel_context.rs  route_group.rs  sse_test.rs  test_app_health.rs  validated_typed_json.rs
kit/: Cargo.toml  README.md
kit/src/: lib.rs
kit/tests/: cross_crate_integration.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
my-app/: .gitignore  Cargo.toml  README.md
ranvier/: Cargo.toml
ranvier-job/: CHANGELOG.md  Cargo.toml  README.md
ranvier-job/src/: job.rs  lib.rs  scheduler.rs  trigger.rs
ranvier/src/: context.rs  lib.rs  pipeline.rs  response.rs  step.rs
ranvier/src/std/: debug.rs  http.rs  mod.rs
runtime/: Cargo.toml  README.md
runtime/benches/: axon_latency.rs
runtime/examples/: dependency_recovery_probe.rs
runtime/src/: async_transition.rs  axon.rs  bus.rs  closure_transition.rs  cluster.rs  distributed.rs  executor.rs  lib.rs  llm.rs  persistence.rs  replay.rs  retry.rs  streaming_axon.rs  testkit.rs
runtime/src/axon/: builder.rs  executor.rs  mod.rs  parallel.rs
runtime/tests/: cancellation_test.rs  dlq_test.rs  migration_test.rs  order_saga_demo.rs  panic_recovery_test.rs  saga_test.rs  timeline_assertion.rs
scripts/: api_surface_inventory.mjs  benchmark_common.ps1  candidate_api_baseline.mjs  candidate_api_semver.mjs  candidate_compile_contract.mjs  check_cratesio_versions.ps1  coverage_gate.mjs  dependency_failure_smoke_podman.ps1  execute_next_publish_wave.ps1  execute_publish_train.ps1  execute_publish_wave.ps1  list_manifest_examples.mjs  m119_examples_smoke.ps1  m131_fullstack_embedded_smoke.ps1  m131_gate_b_smoke.ps1  m131_inspector_quickview_smoke.ps1  m131_schematic_diff_policy_smoke.ps1  m133_public_api_audit.ps1  m133_semver_checks.ps1  m134_http_throughput.ps1  m186_limitation_baseline.ps1  m376_official_track_smoke.ps1  m378_operability_smoke.ps1  m380_admin_crud_users_benchmark.ps1  (+29 more)
testing/: Cargo.toml
testing/src/: lib.rs
(+389 files in other folders)
