[workspace]
resolver = "2"

members = [
    "core",
    "runtime",
    "http",
    "std",
    "macros",
    "kit",
    "examples/basic-schematic",
    "examples/complex-schematic",
    "examples/hello-world",
    "examples/otel-concept",
    "examples/routing-demo",
    "examples/session-pattern",
    "examples/experimental/state-tree-demo",
    "examples/synapse-demo",
    "examples/websocket-loop",
    "examples/order-processing-demo",
    "examples/experimental/fullstack-demo",
    "examples/static-build-demo",
    "examples/db-example",
    "examples/otel-demo",
    "examples/experimental/replay-demo",
    "examples/std-lib-demo",
    "examples/typed-state-tree",
    "extensions/synapse",
    "extensions/db",
    "extensions/status",
    "extensions/observe",
    "extensions/inspector",
    "examples/flat-api-demo",
    "examples/studio-demo",
]

[workspace.package]
authors = ["CELLAXON Inc."]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ranvier-rs/ranvier"
homepage = "https://ranvier.studio"
edition = "2024"
version = "0.1.0"
keywords = ["automation", "workflow", "decision-engine", "circuit", "async"]
categories = ["asynchronous", "development-tools", "web-programming"]

[workspace.dependencies]
# Internal Crates
ranvier-core = { path = "core", version = "0.1.0" }
ranvier-runtime = { path = "runtime", version = "0.1.0" }
ranvier-http = { path = "http", version = "0.1.0" }
ranvier-db = { path = "extensions/db", version = "0.1.0" }
ranvier-status = { path = "extensions/status", version = "0.1.1" }
ranvier-observe = { path = "extensions/observe", version = "0.1.0" }
ranvier-inspector = { path = "extensions/inspector", version = "0.1.0" }
ranvier-std = { path = "std", version = "0.1.0" }
ranvier-macros = { path = "macros", version = "0.1.0" }


# Sync Third-party Dependencies
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.11.0"
futures-core = "0.3"
futures-util = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
pin-project = "1.1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "uuid",
    "json",
] }
