[workspace]
resolver = "2"

members = [
    "core",
    "runtime",
    "http",
    "std",
    "macros",
    "kit",
    "examples/hello-world",
    "examples/routing-params-demo",
    "examples/experimental/state-tree-demo",
    "examples/synapse-demo",
    "examples/websocket-ingress-demo",
    "examples/openapi-demo",
    "examples/ecosystem-seaorm-demo",
    "examples/ecosystem-redis-demo",
    "examples/bus-capability-demo",
    "examples/experimental/replay-demo",
    "examples/basic-schematic",
    "examples/complex-schematic",
    "examples/otel-concept",
    "examples/routing-demo",
    "examples/session-pattern",
    "examples/websocket-loop",
    "examples/order-processing-demo",
    "examples/static-spa-demo",
    "examples/experimental/fullstack-demo",
    "examples/static-build-demo",
    "examples/ecosystem-diesel-demo",
    "examples/ecosystem-nats-demo",
    "examples/ecosystem-meilisearch-demo",
    "examples/experimental/persistence-recovery-demo",
    "examples/std-lib-demo",
    "examples/typed-state-tree",
    "examples/persistence-production-demo",
    "examples/otel-ops-demo",
    "extensions/openapi",
    "extensions/inspector",
    "extensions/audit",
    "extensions/compliance",
    "examples/flat-api-demo",
    "examples/studio-demo",
    "examples/sse-streaming-demo",
    "examples/multipart-upload-demo",
    "examples/testing-patterns",
    "examples/custom-error-types",
    "examples/retry-dlq-demo",
    "examples/state-persistence-demo",
    "examples/multitenancy-demo",
    "examples/inspector-demo",
    "examples/audit-demo",
    "examples/compliance-demo",
    "examples/macros-demo",
    "bench",
    "examples/reference-todo-api",
    "examples/production-config-demo",
]

[workspace.package]
authors = ["CELLAXON Inc."]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ranvier-rs/ranvier"
homepage = "https://ranvier.studio"
edition = "2024"
rust-version = "1.93.0"
version = "0.23.0"
keywords = ["automation", "workflow", "decision-engine", "circuit", "async"]
categories = ["asynchronous", "development-tools", "web-programming"]

[workspace.dependencies]
# Internal Crates
ranvier-core = { path = "core", version = "0.23.0" }
ranvier-runtime = { path = "runtime", version = "0.23.0" }
ranvier-http = { path = "http", version = "0.23.0" }
ranvier-openapi = { path = "extensions/openapi", version = "0.23.0" }
ranvier-inspector = { path = "extensions/inspector", version = "0.23.0" }
ranvier-audit = { path = "extensions/audit", version = "0.23.0" }
ranvier-std = { path = "std", version = "0.23.0" }
ranvier-macros = { path = "macros", version = "0.23.0" }
ranvier-kit = { path = "kit", version = "0.23.0" }
ranvier-compliance = { path = "extensions/compliance", version = "0.23.0" }


# Sync Third-party Dependencies
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.11.0"
futures-core = "0.3"
futures-util = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
pin-project = "1.1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
matchit = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
schemars = { version = "1.2.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "uuid",
    "json",
] }

# --- Workspace Lints ---

[workspace.lints.clippy]
# Allow complex types in return positions (common in service signatures)
type_complexity = "allow"
# Allow functions with many arguments (runtime execution functions)
too_many_arguments = "allow"
# Allow collapsible if-let chains (Rust 2024 edition pattern, refactor gradually)
collapsible_if = "allow"
# Allow Result with large Err variant (HttpResponse is inherently large)
result_large_err = "allow"
# Allow methods that shadow Default trait (SSE builder pattern)
should_implement_trait = "allow"
# Allow large enum variant size differences (e.g. Trigger::Cron vs Interval)
large_enum_variant = "allow"

# --- Release Profiles ---

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
