[package]
name = "ranvier-core"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Protocol-agnostic core for Ranvier - Typed Decision Engine"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait.workspace = true
futures-core = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = "0.1"
ahash = "0.8"
# NOTE: hyper, tower, http removed per Discussion 190 - Core MUST be Protocol-agnostic
# HTTP-related functionality now lives in ranvier-http


