[package]
name = "ranvier-graphql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "GraphQL ingress adapter for Ranvier execution engine"
repository.workspace = true
homepage.workspace = true

[dependencies]
ranvier-core.workspace = true
async-graphql = "7.0.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
