[package]
name = "ranvier-guard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Guard nodes for Ranvier — HTTP security/policy Transitions replacing Tower middleware"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["ranvier", "guard", "middleware", "security"]

[features]
default = []
advanced = ["dep:flate2"]
distributed = ["dep:redis"]

[dependencies]
ranvier-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
subtle = { workspace = true }
flate2 = { workspace = true, optional = true }
redis = { version = "0.29", features = ["tokio-comp", "aio"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
