[package]
name = "ranvier-http"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTTP Ingress adapter for Ranvier - Tower-native Service implementation"

[features]
default = []
validation = ["dep:validator"]

[dependencies]
# Internal
ranvier-core = { workspace = true }
ranvier-runtime = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = "0.24"

# HTTP / Tower Stack
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "fs", "compression-br", "compression-gzip"] }
http = { workspace = true }
http-body = "1"
http-body-util = { workspace = true }
bytes = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
validator = { version = "0.20", features = ["derive"], optional = true }
base64 = "0.22"
sha1 = "0.10"

[dev-dependencies]
tempfile = "3.14"
ranvier-observe = { workspace = true }


