[package]
name = "ranvier"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Typed Decision Engine facade crate for Ranvier"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[features]
default = ["http", "std", "guard"]
http = ["dep:ranvier-http"]
std = ["dep:ranvier-std"]
guard = ["dep:ranvier-guard"]
openapi = ["dep:ranvier-openapi"]
streaming = ["ranvier-core/streaming", "ranvier-runtime/streaming", "ranvier-macros/streaming"]
validation = ["http", "ranvier-http/validation"]

[dependencies]
ranvier-core = { workspace = true }
ranvier-macros = { workspace = true }
ranvier-runtime = { workspace = true }
ranvier-http = { workspace = true, optional = true }
ranvier-std = { workspace = true, optional = true }
ranvier-guard = { workspace = true, optional = true }
ranvier-openapi = { workspace = true, optional = true }



[dev-dependencies]
ranvier-audit = { workspace = true }
ranvier-compliance = { workspace = true }
ranvier-guard = { workspace = true }
ranvier-inspector = { workspace = true }
ranvier-openapi = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
