[package]
name = "ranvier-job"
version = "0.7.0"
edition = "2024"
authors = ["ranvier"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cellaxon/ranvier"
description = "Background job/scheduler support for the Ranvier Typed Decision Engine framework."
categories = ["asynchronous", "development-tools"]
keywords = ["scheduler", "job", "cron", "workflow", "ranvier"]

[dependencies]
ranvier-core = { path = "../core", version = "0.12.0" }
ranvier-runtime = { path = "../runtime", version = "0.12.0" }
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
cron = "0.13"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"