[package]
name = "ranvier-job"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Background job/scheduler support for the Ranvier Typed Decision Engine framework."
categories = ["asynchronous", "development-tools"]
keywords = ["scheduler", "job", "cron", "workflow", "ranvier"]

[dependencies]
ranvier-core = { workspace = true }
ranvier-runtime = { workspace = true }
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
cron = "0.13"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"