[package]
name = "ranvier-runtime"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
description = "Async Execution Engine for Ranvier"

[dependencies]
ranvier-core = { path = "../core", version = "0.1.0" }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
uuid = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
