[package]
name = "ranvier-runtime"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Async Execution Engine for Ranvier"

[features]
default = []
persistence-postgres = ["dep:sqlx"]
persistence-redis = ["dep:redis"]

[dependencies]
ranvier-core = { workspace = true }
ranvier-inspector = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
uuid = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, optional = true }
redis = { version = "0.29.5", optional = true, features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[[bench]]
name = "axon_latency"
harness = false