[package]
name = "ranvier-test"
version = "0.34.0"
edition = "2024"
description = "Test utilities for Ranvier pipelines — TestBus, TestAxon, assertion macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ranvier-rs/ranvier"
keywords = ["ranvier", "testing", "pipeline"]

[dependencies]
ranvier-core = { path = "../core", version = "0.34.0" }
ranvier-runtime = { path = "../runtime", version = "0.34.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
