[package]
name = "ranvier-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ranvier core
ranvier-core = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "chrono", "uuid", "json"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Futures
futures-core = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
