[package]
name = "ranvier-http"
version = "0.1.0"
edition = "2021"
description = "HTTP Ingress adapter for Ranvier - Tower-native Service implementation"

[dependencies]
# Internal
ranvier-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# HTTP / Tower Stack
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }
