[package]
name = "ranvier-status"
version = "0.1.0"
edition = "2021"
description = "Static Status Page generator for Ranvier"

[dependencies]
ranvier-core = { path = "../../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.10"
