[package]
name = "ranvier-std"
version = "0.1.0"
edition = "2021"
description = "Standard Module Library for Ranvier"

[dependencies]
ranvier-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1.2.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
