[package]
name = "auth-jwt-role-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
[dependencies]
ranvier-core = { workspace = true }
ranvier-runtime = { workspace = true }
ranvier-http = { workspace = true }
ranvier-auth = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = "9"
serde = { workspace = true, features = ["derive"] }

