[package]
name = "background-jobs-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ranvier-core = { workspace = true }
ranvier-runtime = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-cron-scheduler = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
