[package]
name = "bus-capability-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
[dependencies]
ranvier-core = { workspace = true }
ranvier-runtime = { workspace = true }
ranvier-macros = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }


[lints]
workspace = true
