[package]
name = "cluster-demo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "cluster-demo"
path = "src/main.rs"

[dependencies]
ranvier-core = { workspace = true }
ranvier-runtime = { workspace = true }
ranvier-cluster = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
