[package]
name = "complex-schematic"
version = "0.1.0"
edition = "2024"

[dependencies]
ranvier-core = { path = "../../core" }
ranvier-runtime = { path = "../../runtime" }
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0"
