[package]
name = "custom-error-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "custom-error-types"
path = "src/main.rs"

[dependencies]
ranvier-core = { workspace = true }
ranvier-runtime = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
